update work with referals and add api call to add user as admin
